2007-12-03  Johannes Schmid <johannes.schmid@openismus.com>

	* configure.in: Cleaned up maemo-launcher integration
	* src/Makefile.am: Renamed MAEMO_LAUNCHER_LDFLAGS to
	MAEMO_LAUNCHER_LIBS

2007-12-03  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/Makefile.am: Added MAEMO_LAUNCHER_CFLAGS and 
	MAEMO_LAUNCHER_LDFLAGS to the Makefile. These will be usually just
	empty but will allow us to build on maemo without changes

2007-12-03  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Rename --disable-doc to --disable-doc-utils to be 
	clearer, and move the check lower in configure.ac because it was 
	somehow causing the check for pkg-config to fail.

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* Makefile.am: Added --disable-doc configure option, because 
	Maemo has no gnome-doc-utils. This was copied partly from Ekiga.

2007-12-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Remove dialog_connection_error.
	* glom/frame_glom.cc:
	* glom/frame_glom.h: Replace use of dialog_connection_error 
	with Utils::show_ok_dialog(), so we can use a Hildon::Note 
	on Maemo.

2007-12-01  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/appstate.cc: Constructor: Make sure that we 
	default to operator mode for client-only mode.
	* glom/glom.glade:
	* glom/frame_glom.cc:
	* glom/frame_glom.h: Hide the footer (user level and found count)
	in Maemo build.

	* glom/dialog_glom.cc:
	* glom/mode_find/box_data_list_find.cc:
	* glom/utility_widgets/flowtablewithfields.cc: Replace some padding 
	and spacing with the constants, so we save space in the Mameo build.

1.6.5:

2007-11-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc: stop_self_hosting(): 
	Use the -m fast option with pg_ctl to avoid waiting for clients to 
	disconnect first.
	This seems to fix bug #420962 (Craig Keogh, Denis Leroy, Perriman) 

2007-11-27  Murray Cumming  <murrayc@murrayc.com>
