@@ -1,3 +1,9 @@
+2007-12-04  Murray Cumming  <murrayc@murrayc.com>
+  
+	* glom/mode_data/box_data_list_related.cc:
+	* glom/utility_widgets/flowtablewithfields.cc: Replace more hard-coded 6 spacing 
+	with our constant, so it is less on Maemo.
+
 2007-12-03  Johannes Schmid <johannes.schmid@openismus.com>
 
 	* configure.in: Cleaned up maemo-launcher integration
